# pulsarsync-core

./: ARCHITECTURE.md  Cargo.toml  DEVLOG.md  Dockerfile  LICENSE  METRICS.md  README.md  RESEARCH.md  docker-compose.yml  memory.x  run_appliance.bat  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: pulsarsync-ci.yml
docs/adr/: 001-rp2040-target.md  002-simd-honesty.md  003-manual-core1-boot.md  004-lock-free-spsc.md  005-incoherent-dedispersion.md  006-cordic-twiddle.md  007-running-phase-modulo.md  008-u32-profile-bins.md  009-u128-intermediate-scaling.md  010-host-target-codesign.md  011-spectral-kurtosis-rfi.md  012-vita49-udp-ingestion.md
docs/science/: pulsar_physics_primer.md
html/: index.html
scripts/: stream_emitter.py  visualize.py
src/: lib.rs  main.rs  metrics.rs  pulsar.rs
src/buffer/: mod.rs  ring.rs
src/dsp/: dedispersion.rs  fft.rs  mod.rs  rfi.rs
src/folding/: engine.rs  mod.rs
src/ingestion/: adc.rs  mod.rs  net.rs
src/web/: mod.rs  server.rs
tests/: physics.rs
