[package]
name = "pulsarsync-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "pulsarsync_core"
path = "src/lib.rs"

[[bin]]
name = "pulsarsync-core"
path = "src/main.rs"
test = false

[dependencies]

[features]
default = []
host-testing = []

[target.'cfg(all(target_arch = "arm", target_os = "none"))'.dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "z"
